<resources>
    <string name="app_name">CineMania</string>

    <string name="hello_world">Hello world!</string>

    <string name="insertAction">Insert</string>
    <string name="modifyAction">Modify</string>
    <string name="deleteAction">Delete</string>

    <string name="item_list_textViewTitle">Delete</string>
    <string name="item_list_textViewSubTitle">Delete</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="action_settings">Settings</string>

    <string name="editTextInsertTitle"></string>
    <string name="editTextInsertSubTitle"></string>
    <string name="textViewInsertDate"></string>
    <string name="buttonInsertDate">Fecha</string>
    <string name="buttonInsert">INSERT</string>
    <string name="editTextInsertTitleTag">Título</string>
    <string name="editTextInsertSubTitleTag">Subtítulo</string>
    <string name="editTextInsertDateTag">Fecha</string>
    <string name="editTextInsertDescripcionTag">Descripción</string>

    <string name="editTextModifyTitle"></string>
    <string name="editTextModifySubTitle"></string>
    <string name="textViewModifyDate"></string>
    <string name="buttonModifyDate">Fecha</string>
    <string name="buttonModify">INSERT</string>
    <string name="editTextModifyTitleTag">Título</string>
    <string name="editTextModifySubTitleTag">Subtítulo</string>
    <string name="editTextModifyDateTag">Fecha</string>
    <string name="editTextModifyDescripcionTag">Descripción</string>

    <string name="textViewViewTitle"></string>
    <string name="textViewViewSubTitle"></string>
    <string name="textViewViewDate"></string>
    <string name="buttonViewDate">Fecha</string>
    <string name="buttonView">INSERT</string>
    <string name="textViewViewSubTitleTag"></string>
    <string name="textViewViewDescripcionTag"></string>

</resources>
