<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mantenimiento.anoriega_ie_8_2_1.InsertActivity">

    <LinearLayout
        android:id="@+id/modifyFirstMain_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButtonModify"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@android:drawable/ic_menu_always_landscape_portrait" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/modify_editTextTitle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:hint="@string/editTextModifyTitleTag"
                android:text="@string/editTextModifyTitle" />

            <EditText
                android:id="@+id/modify_editTextSubTitle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:hint="@string/editTextModifySubTitleTag"
                android:text="@string/editTextModifySubTitle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/modifySecondMain_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modifyFirstMain_linearLayout"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/modify_buttonDate"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/buttonModifyDate"
                android:onClick="insertDate"/>

            <TextView
                android:id="@+id/modify_textViewDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="date"
                android:hint="@string/editTextModifyDateTag"
                android:text="@string/textViewModifyDate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <EditText
                android:id="@+id/modify_editTextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:hint="@string/editTextModifyDescripcionTag"
                android:gravity="top"
                android:lines="10"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/modify_buttonInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modifySecondMain_linearLayout"
        android:text="@string/buttonModify"
        android:onClick="modify"/>

</RelativeLayout>