<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mantenimiento.anoriega_ie_8_2_1.InsertActivity">

    <LinearLayout
        android:id="@+id/viewFirstMain_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@android:drawable/ic_menu_always_landscape_portrait" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_textViewTitle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/textViewViewTitle" />

            <TextView
                android:id="@+id/view_textViewSubTitle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/textViewViewSubTitle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewSecondMain_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFirstMain_linearLayout"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/view_textViewDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="date"
                android:text="@string/textViewViewDate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/view_textViewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:gravity="top"
                android:lines="18"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
